***********************************************************
**********| Version 2.5.2 - Released 2015-02-13 |**********
***********************************************************

* bugfix in directdebit form template (redundant phone check)
* DISCOUNT article number enhanced with item number
* interchanged adj-fee and adj-ref

***********************************************************
**********| Version 2.5.1 - Released 2015-01-30 |**********
***********************************************************

* permits shipping without invoicing
* customer block only on PR

***********************************************************
**********| Version 2.5.0 - Released 2014-12-08 |**********
***********************************************************

* fixed installment without PAYMENT CONFIRM
* no full-return anymore
* no negative basket amount anymore
* ZGB-DSE link by default
* full integration of AT support
* address normalization

***********************************************************
**********| Version 2.4.5 - Released 2014-10-28 |**********
***********************************************************

* cURL SSLVERSION to 1 (TLS1.x)

***********************************************************
**********| Version 2.4.4 - Released 2014-10-22 |**********
***********************************************************

* changed RatePAY gateway URL
* switch to interest rate in Ratenrechner

***********************************************************
**********| Version 2.4.3 - Released 2014-09-05 |**********
***********************************************************

* fixed payment method overlay
* changed PC - prevention of multiple PC
* removed pdf and email generation

***********************************************************
**********| Version 2.4.2 - Released 2014-07-09 |**********
***********************************************************

* dob bugfix and refactoring the method of input
* added validation of vat id and phone number