@@ -35,7 +35,7 @@
                     <fields>
 
                         <version translate="label">
-                            <label>v2.5.2</label>
+                            <label>v2.5.3</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -164,7 +164,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.5.2</label>
+                            <label>v2.5.3</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -367,7 +367,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.5.2</label>
+                            <label>v2.5.3</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -591,7 +591,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.5.2</label>
+                            <label>v2.5.3</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
