@@ -37,7 +37,8 @@
             </action>
         </reference>
         <reference name="footer">
-            <action method="setCacheLifetime"><s>null</s></action>
+            <action method="setCacheLifetime"><s>1</s></action>
+            <lifetime>1</lifetime>
             <block type="core/template" name="ratepay_deviceident" template="ratepay/footer/deviceident.phtml"/>
         </reference>
     </default>
