@@ -1,4 +1,12 @@
 ***********************************************************
+**********| Version 2.5.3 - Released 2015-02-27 |**********
+***********************************************************
+
+* changes in method payment query to prevent collisions
+* changes in DFP footer lifetime
+* fixed log view on longer XMLs
+
+***********************************************************
 **********| Version 2.5.2 - Released 2015-02-13 |**********
 ***********************************************************
 
